--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,2 @@
-[package]
-name = "lox-lang"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = {version = "4.1.8", features = ["derive"]}
-rustyline = "11.0.0"
-log = "0.4.17"
+[workspace]
+members = ["lox-lang", "tree-builder"]
